# solver

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  LICENSE  README.md  solver.cpp
.github/workflows/: release.yml
